fixes card paragrapg overflow in mobile mode

--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -97,6 +97,7 @@
   margin: 4%;
   text-align: center;
   line-height: unset;
+  overflow-y: scroll;
 }
 
 .card footer {
